tests/negative/UnexpectedArgument.juvix
module UnexpectedArgument;

type T := t : T;

f (a : T) : T := t;

x : T := f (x := t);
